--- a/index.html
+++ b/index.html
@@ -13,10 +13,18 @@
 </head>
 
 <body>
+  <header>
+    <ul class="skip-links">
+      <li><a href="#nav">Skip to main nav 🡣</a></li>
+      <li><a href="#content">Skip to main content 🡣</a></li>
+      <li><a href="#contact">Skip to contact form 🡣</a></li>
+    </ul>
+</header>
+
   <div class="container">
     <div class="site-header">
       <h1>Jam Box Studios</h1>
-      <div class="main-nav">
+      <div id="nav" class="main-nav" role="navigation">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
@@ -24,19 +32,19 @@
           <li><a href="#">Studio</a></li>
         </ul>
       </div>
-      <img src="https://placekitten.com/1200/900" class="banner">
+      <img src="https://placekitten.com/1200/900" class="banner" alt="kitten Banner">
     </div>
-    <div class="main-content">
+    <div id="content" class="main-content" role="main">
       <h1>Welcome to Jam Box</h1>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
-      <div class="owner">
+      <div class="owner" role="complementary">
         <h1>Meet the owner</h1>
-        <ul>
-          <li>Name: John Doe</li>
-          <li>Title: CEO</li>
-          <li>Email: johnjoe@jambox.ca</li>
-          <li>Phone: 613-000-0000</li>
+        <ul itemscope itemtype="https://schema.org/Person">
+          <li itemprop="name">Name: John Doe</li>
+          <li itemprop="jobTitle">Title: CEO</li>
+          <li itemprop="email">Email: johnjoe@jambox.ca</li>
+          <li itemprop="telephone">Phone: 613-000-0000</li>
         </ul>
         <h1>Address</h1>
         <p>
@@ -46,7 +54,7 @@
           B3T 0L0
         </p>
       </div>
-      <div class="contact-section">
+      <div id="contact" class="contact-section" role="form">
         <h1>Contact Us</h1>
         <form action="thanks.html">
           <label>Full Name</label>
@@ -58,6 +66,12 @@
           <button type="submit">Send</button>
         </form>
       </div>
+    </div>
+    <div class="top-arrow">
+        <ul class="skip-links">
+          <li><a href="#nav">Back to top 🡡</a></li>
+        </ul>
+
     </div>
     <div class="site-footer">
       &copy; 2021 Jam Box Studios
