Fixes skip links

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       </div>
     </div>
     <div class="top-arrow">
-        <ul class="skip-links">
+        <ul class="skip-links2">
           <li><a href="#nav">Back to top 🡡</a></li>
         </ul>
 
