--- a/index.html
+++ b/index.html
@@ -35,18 +35,18 @@
       <img src="https://placekitten.com/1200/900" class="banner" alt="kitten Banner">
     </div>
     <div id="content" class="main-content" role="main">
-      <h1>Welcome to Jam Box</h1>
+      <h2>Welcome to Jam Box</h2>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
       <div class="owner" role="complementary">
-        <h1>Meet the owner</h1>
+        <h2>Meet the owner</h2>
         <ul itemscope itemtype="https://schema.org/Person">
           <li itemprop="name">Name: John Doe</li>
           <li itemprop="jobTitle">Title: CEO</li>
           <li itemprop="email">Email: johnjoe@jambox.ca</li>
           <li itemprop="telephone">Phone: 613-000-0000</li>
         </ul>
-        <h1>Address</h1>
+        <h2>Address</h2>
         <p>
           Jambox Studios
           123 Guitar Road,
@@ -57,12 +57,15 @@
       <div id="contact" class="contact-section" role="form">
         <h1>Contact Us</h1>
         <form action="thanks.html">
-          <label>Full Name</label>
-          <input type="text" placeholder="Full Name">
-          <input type="text" placeholder="Email">
-          <input type="text" placeholder="Subject">
+          <label id="full-name">Name</label>
+          <input type="text" placeholder="Full Name" id="full-name" name="full-name">
+          <label id="email">Email</label>
+          <input type="email" placeholder="Email" id="email" name="email">
+          <label id="subject">Subject</label>
+          <input type="text" placeholder="Subject" id="subject" name="subject">
           <b>Your Message</b>
-          <textarea></textarea>
+          <label for="message">Message</label>
+          <textarea id="message" name="message" placeholder="Write here"></textarea>
           <button type="submit">Send</button>
         </form>
       </div>
