--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <div class="container">
     <div class="site-header">
       <h1>Jam Box Studios</h1>
-      <div id="nav" class="main-nav" role="navigation">
+      <div id="nav" class="main-nav" aria-label="main-nav" role="navigation">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
@@ -57,12 +57,12 @@
       <div id="contact" class="contact-section" role="form">
         <h1>Contact Us</h1>
         <form action="thanks.html">
-          <label id="full-name">Name</label>
+          <label for="full-name">Name</label>
           <input type="text" placeholder="Full Name" id="full-name" name="full-name">
-          <label id="email">Email</label>
+          <label for="email">Email</label>
           <input type="text" placeholder="Email" id="email" name="email">
-          <label id="subject">Subject</label>
-          <input type="text" placeholder="Subject" id="email" name="email">
+          <label for="subject">Subject</label>
+          <input type="text" placeholder="Subject" id="subject" name="subject">
           <b>Your Message</b>
           <label for="message">Message</label>
           <textarea id="message" name="message" placeholder="Write here"></textarea>
@@ -76,7 +76,7 @@
         </ul>
 
     </div>
-    <div class="site-footer">
+    <div class="site-footer" aria-label="footer" role="contetninfo">
       &copy; 2021 Jam Box Studios
     </div>
   </div>
