--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </ul>
 
     </div>
-    <div class="site-footer" aria-label="footer" role="contetninfo">
+    <div class="site-footer" aria-label="footer" role="contentinfo">
       &copy; 2021 Jam Box Studios
     </div>
   </div>
