--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
           <input type="text" placeholder="Email" id="email" name="email">
           <label for="subject">Subject</label>
           <input type="text" placeholder="Subject" id="subject" name="subject">
-          <b>Your Message</b>
-          <label for="message">Message</label>
+          <label for="message"><b>Your Message</b></label>
           <textarea id="message" name="message" placeholder="Write here"></textarea>
           <button type="submit">Send</button>
         </form>
@@ -76,7 +75,7 @@
         </ul>
 
     </div>
-    <div class="site-footer" aria-label="footer" role="contentinfo">
+    <div class="site-footer" aria-label="site-footer" role="contentinfo">
       &copy; 2021 Jam Box Studios
     </div>
   </div>
